# open-protocol-device-simulator

./: .gitattributes  .gitignore  Cargo.toml  config.example.toml
frontend/: package-lock.json  package.json
frontend/src/lib/api/: client.ts
frontend/src/lib/components/control/: SingleTighteningForm.svelte
frontend/src/lib/config/: env.ts
frontend/src/lib/stores/: websocket.ts
frontend/src/lib/types/: DeviceState.ts  SimulatorEvent.ts  index.ts
reference/: ImplementedMids.md
scripts/: package-windows-portable.ps1
src/: events.rs  http_server.rs  main.rs  multi_spindle.rs  observable_state.rs  session.rs  state.rs  subscriptions.rs
src/config/: settings.rs
src/handler/: io_device_status_request.rs  job_select.rs  mod.rs  multi_spindle_result_subscribe.rs  pset_selected_ack.rs  relay_function_ack.rs  relay_function_subscribe.rs  set_time.rs
src/handler/data/: io_device_status.rs  mod.rs  multi_spindle_result_broadcast.rs  pset_selected.rs  relay_function.rs  tightening_result.rs
tests/: http_api_test.rs  http_endpoints_test.rs  tcp_protocol_test.rs
