[package]
name = "open-protocol-device-simulator"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive", "env"] }
config = { version = "0.15.19", default-features = false, features = ["toml"] }
futures-util = { version = "0.3.31", features = ["sink"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.32.0"
rand = "0.9.2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["std", "derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "net", "time", "sync"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }

[dev-dependencies]
http-body-util = "0.1.3"
